tests/snapshots/snapshots/snapshots__snapshots__json_output__label_add_json_output.snap
---
source: tests/snapshots/json_output.rs
expression: normalize_json(&add_json)
---
[
  {
    "status": "added",
    "issue_id": "ISSUE_ID",
    "label": "backend"
  }
]
