tests/snapshots/snapshots/snapshots__snapshots__json_output__label_list_all_json_output.snap
---
source: tests/snapshots/json_output.rs
expression: normalize_json(&list_all_json)
---
[
  {
    "label": "backend",
    "count": 1
  }
]
