tests/snapshots/snapshots/snapshots__snapshots__json_output__list_json_output.snap
---
source: tests/snapshots/json_output.rs
expression: normalize_json(&json)
---
{
  "issues": [
    {
      "id": "ISSUE_ID",
      "title": "Issue two",
      "status": "open",
      "priority": 2,
      "issue_type": "task",
      "created_at": "TIMESTAMP",
      "created_by": "ACTOR",
      "updated_at": "TIMESTAMP",
      "source_repo": "SOURCE_REPO",
      "source_repo_path": "SOURCE_REPO",
      "mol_type": "",
      "work_type": "",
      "wisp_type": "",
      "dependency_count": 0,
      "dependent_count": 0
    },
    {
      "id": "ISSUE_ID",
      "title": "Issue one",
      "status": "open",
      "priority": 2,
      "issue_type": "task",
      "created_at": "TIMESTAMP",
      "created_by": "ACTOR",
      "updated_at": "TIMESTAMP",
      "source_repo": "SOURCE_REPO",
      "source_repo_path": "SOURCE_REPO",
      "mol_type": "",
      "work_type": "",
      "wisp_type": "",
      "dependency_count": 0,
      "dependent_count": 0
    }
  ],
  "total": 2,
  "limit": 0,
  "offset": 0,
  "has_more": false
}
