tests/snapshots/snapshots/snapshots__snapshots__json_output__list_priority_ordering_json_output.snap
---
source: tests/snapshots/json_output.rs
expression: normalized
---
{
  "issues": [
    {
      "id": "ISSUE_ID",
      "title": "Critical task",
      "status": "open",
      "priority": 0,
      "issue_type": "task",
      "created_at": "TIMESTAMP",
      "created_by": "ACTOR",
      "updated_at": "TIMESTAMP",
      "source_repo": "SOURCE_REPO",
      "source_repo_path": "SOURCE_REPO",
      "mol_type": "",
      "work_type": "",
      "wisp_type": "",
      "dependency_count": 0,
      "dependent_count": 0
    },
    {
      "id": "ISSUE_ID",
      "title": "High priority task",
      "status": "open",
      "priority": 1,
      "issue_type": "task",
      "created_at": "TIMESTAMP",
      "created_by": "ACTOR",
      "updated_at": "TIMESTAMP",
      "source_repo": "SOURCE_REPO",
      "source_repo_path": "SOURCE_REPO",
      "mol_type": "",
      "work_type": "",
      "wisp_type": "",
      "dependency_count": 0,
      "dependent_count": 0
    },
    {
      "id": "ISSUE_ID",
      "title": "Low priority task",
      "status": "open",
      "priority": 3,
      "issue_type": "task",
      "created_at": "TIMESTAMP",
      "created_by": "ACTOR",
      "updated_at": "TIMESTAMP",
      "source_repo": "SOURCE_REPO",
      "source_repo_path": "SOURCE_REPO",
      "mol_type": "",
      "work_type": "",
      "wisp_type": "",
      "dependency_count": 0,
      "dependent_count": 0
    }
  ],
  "total": 3,
  "limit": 0,
  "offset": 0,
  "has_more": false
}
