tests/snapshots/snapshots/snapshots__snapshots__json_output__representative_show_json_output.snap
---
source: tests/snapshots/json_output.rs
expression: output.stdout.trim_end()
---
[{"id":"bd-golden-parent","title":"01 Parent Epic","description":"Parent description","status":"open","priority":1,"issue_type":"epic","assignee":"alice","owner":"owner@example.com","created_at":"2026-01-01T00:00:00Z","created_by":"fixture","updated_at":"2026-01-01T00:00:00Z","due_at":"2026-07-01T00:00:00Z","source_repo":".","mol_type":"","work_type":"","wisp_type":"","labels":["ops","ux"],"dependents":[{"id":"bd-golden-child","title":"02 Child Task","status":"in_progress","priority":2,"dependency_type":"parent-child"}]},{"id":"bd-golden-child","title":"02 Child Task","description":"Child description","design":"Design notes","acceptance_criteria":"Acceptance text","notes":"Operator notes","status":"in_progress","priority":2,"issue_type":"task","assignee":"bob","owner":"child@example.com","created_at":"2026-01-02T00:00:00Z","created_by":"fixture","updated_at":"2026-01-02T01:00:00Z","defer_until":"2026-07-03T00:00:00Z","source_repo":".","mol_type":"","work_type":"","wisp_type":"","labels":["backend"],"dependencies":[{"id":"bd-golden-parent","title":"01 Parent Epic","status":"open","priority":1,"dependency_type":"parent-child"}],"comments":[{"id":1,"issue_id":"bd-golden-child","author":"fixture","text":"first comment","created_at":"2026-01-02T02:00:00Z"}],"parent":"bd-golden-parent"},{"id":"bd-golden-closed","title":"03 Closed Bug","description":"Closed bug description","status":"closed","priority":0,"issue_type":"bug","assignee":"carol","owner":"owner@example.com","created_at":"2026-01-03T00:00:00Z","created_by":"fixture","updated_at":"2026-01-03T03:00:00Z","closed_at":"2026-01-03T03:00:00Z","close_reason":"fixed","closed_by_session":"session-1","source_repo":".","mol_type":"","work_type":"","wisp_type":"","labels":["bugfix"]},{"id":"bd-golden-deleted","title":"04 Deleted Cleanup","status":"tombstone","priority":3,"issue_type":"task","created_at":"2026-01-04T00:00:00Z","created_by":"fixture","updated_at":"2026-01-04T04:00:00Z","closed_at":"2026-01-04T04:00:00Z","source_repo":".","deleted_at":"2026-01-04T04:00:00Z","deleted_by":"fixture","delete_reason":"fixture tombstone","original_type":"task","mol_type":"","work_type":"","wisp_type":""}]
