tests/snapshots/snapshots/snapshots__snapshots__json_output__search_json_output.snap
---
source: tests/snapshots/json_output.rs
expression: normalize_json(&json)
---
[
  {
    "id": "ISSUE_ID",
    "title": "Search target",
    "status": "open",
    "priority": 2,
    "issue_type": "task",
    "created_at": "TIMESTAMP",
    "created_by": "ACTOR",
    "updated_at": "TIMESTAMP",
    "source_repo": "SOURCE_REPO",
    "source_repo_path": "SOURCE_REPO",
    "mol_type": "",
    "work_type": "",
    "wisp_type": "",
    "dependency_count": 0,
    "dependent_count": 0
  }
]
